[package]
name = "osmium"
version = "0.1.0"
authors = ["ThetaSinner <greatdjonfire@hotmail.co.uk>"]

[dependencies]
bytes = "0.4"
futures = "0.1"
tokio-io = "0.1"
tokio-core = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
futures-cpupool = "0.1"
log = "0.3"
pretty_env_logger = "0.1.1"

# http only
httparse = "1.2.3"

[dev-dependencies]
curl = "0.4.7"
