[package]
name = "osmium"
version = "0.1.0"
authors = ["ThetaSinner <greatdjonfire@hotmail.co.uk>"]

[dependencies]
bytes = "0.4"
futures = "0.1"
tokio-io = "0.1"
tokio-core = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
futures-cpupool = "0.1"
log = "0.3"
pretty_env_logger = "0.1.1"
threadpool = "1.6"

# feature is enabled so that alpn is available.
openssl = { version = "^0.9.17", features = ["v110", "v102"] }
tokio-openssl = { git = "https://github.com/ThetaSinner/tokio-openssl" }

regex = "0.2"

# http only
httparse = "1.2.3"

[dev-dependencies]
rustc_version = "0.2.1"
curl = "0.4.7"

[features]
default=[]
osmium_support = []
